# SortPolicyAnalyzer

./: CMakeLists.txt  README.md
include/: sort_utils.hpp
src/: main.cpp  sort_utils.cpp
tests/: benchmark_policy.cpp  test_policy.cpp
